--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 		crossorigin="anonymous">
-	<title>Bike Data Analysis</title>
+	<title>BykeData</title>
 	<link href="album.css" rel="stylesheet">
 </head>
 <body>
