--- a/index.html
+++ b/index.html
@@ -53,15 +53,17 @@
 	  </ol>
 
 	  <div class="carousel-inner">
-	    <div class="carousel-item active">
-	      <img class="d-block w-100" src="bikeshare1.png" alt="Second slide">
-	    </div>
-	    <div class="carousel-item">
-	      <img class="d-block w-100" src="bikeshare3.jpg" alt="Third slide">
-	    </div>
-	    <div class="carousel-item">
-	      <img class="d-block w-100" src="bikeshare4.jpg" alt="First slide">
-	    </div>
+	    <div class="carousel-inner">
+		    <div class="carousel-item active">
+		      <img class="d-block w-100" src="bikeshare1.png" alt="First slide">
+		    </div>
+		    <div class="carousel-item">
+		      <img class="d-block w-100" src="bikeshare3.jpg" alt="Second slide">
+		    </div>
+		    <div class="carousel-item">
+		      <img class="d-block w-100" src="bikeshare4.jpg" alt="Third slide">
+		    </div>
+		  </div>
 	  </div>
 	</div>
 	<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
