--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <!-- WELCOME -->
 	<div class="container-fluid padding">
-	<div class="row welcome text-center>
+	<div class="row welcome text-center">
 	    <div class="col-12">
 		<h1 class="display-4">Welcome to BykeData!</h1>    
 	    </div>
