--- a/trends.html
+++ b/trends.html
@@ -27,9 +27,9 @@
         </div>
         <div class="col-sm-12 col-md-4">
             <img src="acrossmonths.png"></img>
-            <h3>Distribution of Durations</h3>
-            <p>This graph displays how each pass has a difference in the 
-            times the customers are likely to use the bike for.</p>
+            <h3>Usage Across Months</h3>
+            <p>A visual in which it is seen how the bike rentals are 
+            affected by the time of the year.</p>
         </div>
     </div>
     <hr class="my-4"></hr>
