--- a/trends.html
+++ b/trends.html
@@ -8,24 +8,24 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Trends</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="style1.css" rel="stylesheet">
 </head>
 <body>
 <div class="container-fluid padding">
     <div class="row text-center padding">
-        <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="col-xs-12 col-sm-6 col-md-6">
             <img src="durationperpass.png"></img>
             <h3>Distribution of Durations</h3>
             <p>This graph displays how each pass has a difference in the 
             times the customers are likely to use the bike for.</p>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="col-xs-12 col-sm-6 col-md-6">
             <img src="perpass.png"></img>
             <h3>Distribution of Pass Types</h3>
             <p>This graph displays how each pass has a difference in the 
             times the customers are likely to use the bike for.</p>
         </div>
-        <div class="col-sm-12 col-md-4">
+        <div class="col-12">
             <img src="acrossmonths.png"></img>
             <h3>Usage Across Months</h3>
             <p>A visual in which it is seen how the bike rentals are 
