--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<title>Bike Data Analysis</title>
+	<title>BykeData</title>
 	<link href="style1.css" rel="stylesheet">
 	
 </head>
@@ -32,7 +32,7 @@
 	               <a class="nav-link" href="trends.html">Trends</a>
 	           </li>
 	           <li class="nav-item active">
-                   <a class="nav-link" href="#">Popularity</a>
+                   <a class="nav-link" href="#">Top Stations</a>
                </li>
                <li class="nav-item active">
                    <a class="nav-link" href="#">Stats</a>
