--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 	               <a class="nav-link" href="trends.html">Trends</a>
 	           </li>
 	           <li class="nav-item active">
-                   <a class="nav-link" href="#">Top Stations</a>
+                   <a class="nav-link" href="topstations.html">Top Stations</a>
                </li>
                <li class="nav-item active">
-                   <a class="nav-link" href="#">Stats</a>
+                   <a class="nav-link" href="stats.htmls">Stats</a>
                </li>
                <li class="nav-item active">
-                   <a class="nav-link" href="#">Community</a>
+                   <a class="nav-link" href="community.html">Community</a>
                </li>
 	       </ul>
 	   </div>
