--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                    <a class="nav-link" href="topstations.html">Top Stations</a>
                </li>
                <li class="nav-item active">
-                   <a class="nav-link" href="stats.htmls">Stats</a>
+                   <a class="nav-link" href="stats.html">Stats</a>
                </li>
                <li class="nav-item active">
                    <a class="nav-link" href="community.html">Community</a>
