--- a/trends.html
+++ b/trends.html
@@ -11,6 +11,20 @@
     <link href="style1.css" rel="stylesheet">
 </head>
 <body>
+
+<div class="container-fluid padding">
+<div class="row welcome text-center">
+    <div class="col-12">
+        <h1 class="display-4">Trends</h1>    
+    </div>
+    <hr>
+    <div class="col-12">
+        <p class="lead">Here are a couple of trends that I found interesting!</p>
+    </div>
+    </hr>
+</div>    
+</div>
+
 <div class="container-fluid padding">
     <div class="row text-center padding">
         <div class="col-xs-12 col-sm-6 col-md-6">
