--- a/trends.html
+++ b/trends.html
@@ -3,50 +3,74 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>Trends</title>
-    <link href="style1.css" rel="stylesheet">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet"
+		href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+		crossorigin="anonymous">
+		<title>Trends</title>
+		<link href="style1.css" rel="stylesheet">
 </head>
 <body>
 
-<div class="container-fluid padding">
-<div class="row welcome text-center">
-    <div class="col-12">
-        <h1 class="display-4">Trends</h1>    
-    </div>
-    <hr>
-    <div class="col-12">
-        <p class="lead">Here are a couple of trends that I found interesting!</p>
-    </div>
-    </hr>
-</div>    
-</div>
+	<div class="container-fluid padding">
+		<div class="row welcome text-center">
+			<div class="col-12">
+				<h1 class="display-4">Trends</h1>
+			</div>
+			<hr>
+				<div class="col-12">
+					<p class="lead">Here are a couple of trends that I found
+						interesting!</p>
+				</div>
+			</hr>
+		</div>
+	</div>
 
-<div class="container-fluid padding">
-    <div class="row text-center padding">
-        <div class="col-xs-12 col-sm-6 col-md-6">
-            <img src="durationperpass.png"></img>
-            <h3>Distribution of Durations</h3>
-            <p>This graph displays how each pass has a difference in the 
-            times the customers are likely to use the bike for.</p>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-6">
-            <img src="perpass.png"></img>
-            <h3>Distribution of Pass Types</h3>
-            <p>This graph displays how each pass has a difference in the 
-            times the customers are likely to use the bike for.</p>
-        </div>
-        <div class="col-12">
-            <img src="acrossmonths.png"></img>
-            <h3>Usage Across Months</h3>
-            <p>A visual in which it is seen how the bike rentals are 
-            affected by the time of the year.</p>
-        </div>
-    </div>
-    <hr class="my-4"></hr>
-    </div>
+	<div class="container-fluid padding">
+		<div class="row text-center padding">
+			<div class="col-xs-12 col-sm-6 col-md-6">
+				<img src="durationperpass.png"></img>
+				<h3>Distribution of Durations</h3>
+				<p>This graph displays how each pass type has a difference in
+					the times the customers are likely to use the bike for. Customers
+					who just walk up to a bike without a pass, are likely to use it for
+					longer than say someone in the staff might use it for. This is
+					likely because walk-up customers likely don't need a bike on a
+					daily basis and just use it occasionally when they need to go
+					farther. While staff would likely just move the bikes in between
+					stations. Furthermore, we can see that Flex-Pass clients are likely
+					to use the bikes for a much shorter amount of time than a monthly
+					pass user. We can assume from the data that the monthly pass user's
+					are the heaviest regular users of the bikes.</p>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-6">
+				<img src="perpass.png"></img>
+				<h3>Distribution of Pass Types</h3>
+				<p>From this bar graph we can further support our previous claim that 
+				monthly users are the heaviest regular users of the bikes. This can be seen in 
+				the chart as there are 81,304 monthly users compared to 41,224 walk-up, 
+				9,517 flex-pass, and 382 staff clients. I was able to calculate the exact number 
+				of clients in each category using an R algorithm. This answers the 4th challenge question, 
+				which asks how many customers include bike sharing as a regular part of their commute. For
+				this all we need to do is add the number of clients for each pass category excluding
+				walk-ups. The resulting answer is 91,203 regular customers. </p>
+			</div>
+			<div class="col-12">
+				<img src="acrossmonths.png"></img>
+				<h3>Usage Across Months</h3>
+				<p>A visual in which it is seen how the bike rentals are
+					affected by the time of the year it is. As can be seen, the summer is a 
+					lot busier than the winter, which is reasonable as there are likely more tourists
+					in the summer time, and generally more bike friendly temperatures. While in the winter
+					it gets colder, with fewer tourists so the usage of the bikes decreases. The peak time in terms of 
+					ridership appears to be in August with about 24,000 riders, as compared to the slowest
+					month of February in which only about 11,500 clients ride the bikes. This also answers
+					the first bonus question as to how the ridership changes across seasons.</p>
+			</div>
+		</div>
+		<hr class="my-4"></hr>
+	</div>
 </body>
 </html>
