--- a/topstations.html
+++ b/topstations.html
@@ -39,19 +39,24 @@
 
 
 	<img src="busieststarting.png"></img>
-	<hr/>
+	<hr />
 	<h2>Busiest Ending Station: 3005</h2>
-	<hr/>
+	<hr />
 	<img src="busiestending.png"></img>
-    <hr/>
-	<p class="text-center" style="font-size:24px">Using Tableau I was able to find that the busiest station for
-		starting off a trip was Station 3069. While the busiest for ending was
-		Station 3005. I excluded station 4108 from both of these charts. This
-		exclusion does not affect my intended purpose much which was to find
-		the busiest stations, and station 4108 was pretty slow. Then I located
-		both of the stations using the given coordinates, by plugging the
-		latitude/longitude pairs into Google Maps.</p>
-    <hr/>
+	<hr />
+	<p class="text-center" style="font-size: 24px">Using Tableau I was
+		able to find that the busiest station for starting off a trip was
+		Station 3069 (5,130 trips). While the busiest for ending was Station
+		3005 (6,261 trips). I excluded station 4108 from both of these charts.
+		This exclusion does not affect my intended purpose much which was to
+		find the busiest stations, and station 4108 was pretty slow. Then I
+		located both of the stations using the given coordinates, by plugging
+		the latitude/longitude pairs into Google Maps. This data also shows
+		that as the day goes by, more bikes end up in the southwest of the
+		city (by the Sheraton Grand) than by W 3rd Street. So this shows that
+		there is a need for the company to move some bikes back to the
+		northeast side as that is the busiest spot for picking up bikes.</p>
+	<hr />
 
 	<div class="container-fluid padding">
 		<div class="row text-center padding">
