--- a/trends.html
+++ b/trends.html
@@ -48,26 +48,30 @@
 			<div class="col-xs-12 col-sm-6 col-md-6">
 				<img src="perpass.png"></img>
 				<h3>Distribution of Pass Types</h3>
-				<p>From this bar graph we can further support our previous claim that 
-				monthly users are the heaviest regular users of the bikes. This can be seen in 
-				the chart as there are 81,304 monthly users compared to 41,224 walk-up, 
-				9,517 flex-pass, and 382 staff clients. I was able to calculate the exact number 
-				of clients in each category using an R algorithm. This answers the 4th challenge question, 
-				which asks how many customers include bike sharing as a regular part of their commute. For
-				this all we need to do is add the number of clients for each pass category excluding
-				walk-ups. The resulting answer is 91,203 regular customers. </p>
+				<p>From this bar graph we can further support our previous claim
+					that monthly users are the heaviest regular users of the bikes.
+					This can be seen in the chart as there are 81,304 monthly users
+					compared to 41,224 walk-up, 9,517 flex-pass, and 382 staff clients.
+					I was able to calculate the exact number of clients in each
+					category using an R algorithm. This answers the 4th challenge
+					question, which asks how many customers include bike sharing as a
+					regular part of their commute. For this all we need to do is add
+					the number of clients for each pass category excluding walk-ups.
+					The resulting answer is 91,203 regular customers.</p>
 			</div>
 			<div class="col-12">
 				<img src="acrossmonths.png"></img>
 				<h3>Usage Across Months</h3>
 				<p>A visual in which it is seen how the bike rentals are
-					affected by the time of the year it is. As can be seen, the summer is a 
-					lot busier than the winter, which is reasonable as there are likely more tourists
-					in the summer time, and generally more bike friendly temperatures. While in the winter
-					it gets colder, with fewer tourists so the usage of the bikes decreases. The peak time in terms of 
-					ridership appears to be in August with about 24,000 riders, as compared to the slowest
-					month of February in which only about 11,500 clients ride the bikes. This also answers
-					the first bonus question as to how the ridership changes across seasons.</p>
+					affected by the time of the year it is. As can be seen, the summer
+					is a lot busier than the winter, which is reasonable as there are
+					likely more tourists in the summer time, and generally more bike
+					friendly temperatures. While in the winter it gets colder, with
+					fewer tourists so the usage of the bikes decreases. The peak time
+					in terms of ridership appears to be in August with about 24,000
+					riders, as compared to the slowest month of February in which only
+					about 11,500 clients ride the bikes. This also answers the first
+					bonus question as to how the ridership changes across seasons.</p>
 			</div>
 		</div>
 		<hr class="my-4"></hr>
