--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
 				<li class="nav-item active"><a class="nav-link"
 					href="topstations.html">Top Stations</a></li>
 				<li class="nav-item active"><a class="nav-link"
-					href="stats.html">Stats</a></li>
-				<li class="nav-item active"><a class="nav-link"
-					href="community.html">Community</a></li>
+					href="stats.html">Statistics</a></li>
+
 			</ul>
 		</div>
 	</div>
